--- a/openfisca_pf/parameters/daf/rch/droit_enregistrement/baux.yaml
+++ b/openfisca_pf/parameters/daf/rch/droit_enregistrement/baux.yaml
@@ -2,7 +2,7 @@ description: Calcul du droit d'enregistrement pour les baux
 metadata:
   type: single_amount
   unit: year
-  reference: https://law.gov.example/basic-income/amount
+  reference: https://lexpol.cloud.pf/LexpolAfficheTexte.php?texte=521011&idr=208&np=1
 brackets:
   - amount:
       2018-01-01:
