--- a/openfisca_pf/parameters/daf/rch/taxe_publicite_immobiliere/acquisition.yaml
+++ b/openfisca_pf/parameters/daf/rch/taxe_publicite_immobiliere/acquisition.yaml
@@ -1,6 +1,6 @@
 description: Taux de la taxe de publicité immobilière
 metadata:
-  reference: https://law.gov.example/basic-income/amount
+  reference: https://lexpol.cloud.pf/LexpolAfficheTexte.php?texte=521011&idr=208&np=1
 rate:
   values:
     2008-08-25: 0.001
