--- a/openfisca_pf/tests/dicp/impot_foncier/unitaires/local/taux.yaml
+++ b/openfisca_pf/tests/dicp/impot_foncier/unitaires/local/taux.yaml
@@ -223,6 +223,19 @@
     taux_seconde_exemption_temporaire: 0.50
   output:
     taux_exemption_temporaire: 0.00
+- name: "taux_exemption_temporaire est egale a 0 si occupé avant date de fin de travaux"
+  period: 2024
+  input:
+    acces_exemption_temporaire_exceptionnelle: True
+    demande_exemption_temporaire_exceptionnelle: True
+    date_certificat_conformite: 2019-12-12
+    duree_premiere_exemption_temporaire_pays: 5
+    taux_premiere_exemption_temporaire: 1.00
+    duree_seconde_exemption_temporaire_pays: 3
+    taux_seconde_exemption_temporaire: 0.50
+    occupation_avant_fin_de_travaux: true
+  output:
+    taux_exemption_temporaire: 0.00
 
 - name: "duree_exemption_temporaire est egale a 5 si date_certificat_conformite < duree_premiere_exemption_temporaire_pays"
   period: 2024
@@ -278,6 +291,13 @@
   period: 2024
   input:
     date_certificat_conformite: 2015-12-31
+  output:
+    duree_exemption_temporaire_restante: 0
+- name: "duree_exemption_temporaire_restante est egale a 0 si occupé avant date de fin de travaux"
+  period: 2024
+  input:
+    date_certificat_conformite: 2020-12-31
+    occupation_avant_fin_de_travaux: true
   output:
     duree_exemption_temporaire_restante: 0
 
