--- a/openfisca_pf/tests/dicp/it/cas_de_tests_activite_simple_ventes.yaml
+++ b/openfisca_pf/tests/dicp/it/cas_de_tests_activite_simple_ventes.yaml
@@ -3,7 +3,7 @@
   input:
     personne:
       releve_de_charges_fourni: N
-      annexes_IT_fournies: N
+      annexes_it_fournies: N
       chiffre_affaire_farine_riz_sucre: 16000000
       total_charges_releve_detaille: 0
     persons:
@@ -18,7 +18,7 @@
   input:
     personne:
       releve_de_charges_fourni: N
-      annexes_IT_fournies: N
+      annexes_it_fournies: N
       chiffre_affaire_hydrocarbures_au_detail: 16000000
       total_charges_releve_detaille: 0
     persons:
@@ -33,7 +33,7 @@
   input:
     personne:
       releve_de_charges_fourni: N
-      annexes_IT_fournies: N
+      annexes_it_fournies: N
       chiffre_affaire_hydrocarbures_au_detail: 24000000
       total_charges_releve_detaille: 0
     persons:
@@ -48,7 +48,7 @@
   input:
     personne:
       releve_de_charges_fourni: N
-      annexes_IT_fournies: N
+      annexes_it_fournies: N
       chiffre_affaire_vente_gros_lait_frais: 16000000
       total_charges_releve_detaille: 16000000
     persons:
@@ -63,7 +63,7 @@
   input:
     personne:
       releve_de_charges_fourni: N
-      annexes_IT_fournies: N
+      annexes_it_fournies: N
       chiffre_affaire_importateurs_grossistes: 16000000
       total_charges_releve_detaille: 16000000
     persons:
@@ -78,7 +78,7 @@
   input:
     personne:
       releve_de_charges_fourni: N
-      annexes_IT_fournies: N
+      annexes_it_fournies: N
       chiffre_affaire_ventes_en_gros: 16000000
       total_charges_releve_detaille: 0
     persons:
@@ -93,7 +93,7 @@
   input:
     personne:
       releve_de_charges_fourni: N
-      annexes_IT_fournies: N
+      annexes_it_fournies: N
       chiffre_affaire_tabacs: 16000000
       total_charges_releve_detaille: 0
     persons:
@@ -108,7 +108,7 @@
   input:
     personne:
       releve_de_charges_fourni: N
-      annexes_IT_fournies: N
+      annexes_it_fournies: N
       chiffre_affaire_negociants_detaillants_ca_superieur_20mf: 30000000
       total_charges_releve_detaille: 0
     persons:
@@ -123,7 +123,7 @@
   input:
     personne:
       releve_de_charges_fourni: N
-      annexes_IT_fournies: N
+      annexes_it_fournies: N
       chiffre_affaire_ventes_inferieur_20_millions: 16000000
       total_charges_releve_detaille: 0
     persons:
@@ -138,7 +138,7 @@
   input:
     personne:
       releve_de_charges_fourni: N
-      annexes_IT_fournies: N
+      annexes_it_fournies: N
       chiffre_affaire_ventes_a_l_aventure_armateurs: 15000000
       total_charges_releve_detaille: 0
     persons:
@@ -153,7 +153,7 @@
   input:
     personne:
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_ventes_a_l_aventure_armateurs: 16000000
       total_charges_releve_detaille: 0
     persons:
@@ -168,7 +168,7 @@
   input:
     personne:
       releve_de_charges_fourni: N
-      annexes_IT_fournies: N
+      annexes_it_fournies: N
       chiffre_affaire_ventes_a_l_aventure_armateurs: 16000000
       total_charges_releve_detaille: 10000000
     persons:
@@ -183,7 +183,7 @@
   input:
     personne:
       releve_de_charges_fourni: O
-      annexes_IT_fournies: N
+      annexes_it_fournies: N
       chiffre_affaire_ventes_a_l_aventure_armateurs: 16000000
       total_charges_releve_detaille: 10000000
     persons:
@@ -198,7 +198,7 @@
   input:
     personne:
       releve_de_charges_fourni: N
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_ventes_a_l_aventure_armateurs: 16000000
       total_charges_releve_detaille: 10000000
     persons:
@@ -213,7 +213,7 @@
   input:
     personne:
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_ventes_a_l_aventure_armateurs: 16000000
       total_charges_releve_detaille: 10000000
     persons:
@@ -228,7 +228,7 @@
   input:
     personne:
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_ventes_sans_abattement: 100000000
       total_charges_releve_detaille: 100000000
     persons:
