--- a/openfisca_pf/tests/dicp/it/cas_de_tests_activite_simple_prestations.yaml
+++ b/openfisca_pf/tests/dicp/it/cas_de_tests_activite_simple_prestations.yaml
@@ -4,7 +4,7 @@
     personne:
       type_personne: P
       releve_de_charges_fourni: N
-      annexes_IT_fournies: N
+      annexes_it_fournies: N
       chiffre_affaire_location_non_meublee: 50000000
       total_charges_releve_detaille: 0
     persons:
@@ -20,7 +20,7 @@
     personne:
       type_personne: P
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_location_non_meublee: 50000000
       total_charges_releve_detaille: 30000000
     persons:
@@ -36,7 +36,7 @@
     personne:
       type_personne: M
       releve_de_charges_fourni: N
-      annexes_IT_fournies: N
+      annexes_it_fournies: N
       chiffre_affaire_location_non_meublee: 50000000
       total_charges_releve_detaille: 30000000
     persons:
@@ -52,7 +52,7 @@
     personne:
       type_personne: M
       releve_de_charges_fourni: N
-      annexes_IT_fournies: N
+      annexes_it_fournies: N
       chiffre_affaire_location_non_meublee: 5500000
       total_charges_releve_detaille: 3000000
     persons:
@@ -68,7 +68,7 @@
     personne:
       type_personne: P
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_location_non_meublee: 6500000
       total_charges_releve_detaille: 4000000
     persons:
@@ -84,7 +84,7 @@
     personne:
       type_personne: P
       releve_de_charges_fourni: O
-      annexes_IT_fournies: N
+      annexes_it_fournies: N
       chiffre_affaire_location_non_meublee: 16000000
       total_charges_releve_detaille: 0
     persons:
@@ -100,7 +100,7 @@
     personne:
       type_personne: P
       releve_de_charges_fourni: O
-      annexes_IT_fournies: N
+      annexes_it_fournies: N
       chiffre_affaire_location_non_meublee: 16000000
       total_charges_releve_detaille: 10000000
     persons:
@@ -116,7 +116,7 @@
     personne:
       type_personne: M
       releve_de_charges_fourni: O
-      annexes_IT_fournies: N
+      annexes_it_fournies: N
       chiffre_affaire_location_non_meublee: 16000000
       total_charges_releve_detaille: 0
     persons:
@@ -132,7 +132,7 @@
 #     personne:
 #       type_personne: M
 #       releve_de_charges_fourni: N
-#       annexes_IT_fournies: N
+#       annexes_it_fournies: N
 #       chiffre_affaire_location_non_meublee: 6500000
 #       charges_location_non_meublee: 4000000
 #     persons:
@@ -146,7 +146,7 @@
 #     personne:
 #       type_personne: M
 #       releve_de_charges_fourni: O
-#       annexes_IT_fournies: N
+#       annexes_it_fournies: N
 #       chiffre_affaire_location_non_meublee: 6500000
 #       charges_location_non_meublee: 4000000
 #     persons:
@@ -160,7 +160,7 @@
 #     personne:
 #       type_personne: M
 #       releve_de_charges_fourni: N
-#       annexes_IT_fournies: O
+#       annexes_it_fournies: O
 #       chiffre_affaire_location_non_meublee: 6500000
 #       charges_location_non_meublee: 4000000
 #     persons:
@@ -174,7 +174,7 @@
 #     personne:
 #       type_personne: P
 #       releve_de_charges_fourni: O
-#       annexes_IT_fournies: N
+#       annexes_it_fournies: N
 #       chiffre_affaire_location_non_meublee: 6500000
 #       charges_location_non_meublee: 4000000
 #     persons:
@@ -188,7 +188,7 @@
     personne:
       type_personne: P
       releve_de_charges_fourni: N
-      annexes_IT_fournies: N
+      annexes_it_fournies: N
       chiffre_affaire_location_meublee: 100000000
       total_charges_releve_detaille: 0
     persons:
@@ -204,7 +204,7 @@
     personne:
       type_personne: M
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_location_meublee: 7000000
       total_charges_releve_detaille: 0
     persons:
@@ -220,7 +220,7 @@
     personne:
       type_personne: P
       releve_de_charges_fourni: N
-      annexes_IT_fournies: N
+      annexes_it_fournies: N
       chiffre_affaire_location_meublee: 16000000
       total_charges_releve_detaille: 0
     persons:
@@ -236,7 +236,7 @@
     personne:
       type_personne: M
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_location_meublee: 16000000
       total_charges_releve_detaille: 0
     persons:
@@ -252,7 +252,7 @@
     personne:
       type_personne: M
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_location_meublee: 7000000
       total_charges_releve_detaille: 4000000
     persons:
@@ -268,7 +268,7 @@
     personne:
       type_personne: P
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_location_terrains_nus: 6500000
       total_charges_releve_detaille: 0
     persons:
@@ -284,7 +284,7 @@
     personne:
       type_personne: P
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_location_terrains_nus: 6500000
       total_charges_releve_detaille: 4000000
     persons:
@@ -300,7 +300,7 @@
     personne:
       type_personne: M
       releve_de_charges_fourni: O
-      annexes_IT_fournies: N
+      annexes_it_fournies: N
       chiffre_affaire_location_terrains_nus: 6500000
       total_charges_releve_detaille: 4000000
     persons:
@@ -316,7 +316,7 @@
     personne:
       type_personne: M
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_prestations_sans_reduction: 5500000
       total_charges_releve_detaille: 0
     persons:
@@ -332,7 +332,7 @@
     personne:
       type_personne: M
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_prestations_sans_reduction: 5500000
       total_charges_releve_detaille: 3000000
     persons:
@@ -348,7 +348,7 @@
     personne:
       type_personne: P
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_plomberie_et_installation_sanitaire: 5500000
       total_charges_releve_detaille: 0
     persons:
@@ -364,7 +364,7 @@
     personne:
       type_personne: P
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_plomberie_et_installation_sanitaire: 5500000
       total_charges_releve_detaille: 3000000
     persons:
@@ -380,7 +380,7 @@
     personne:
       type_personne: P
       releve_de_charges_fourni: N
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_plomberie_et_installation_sanitaire: 5500000
       total_charges_releve_detaille: 3000000
     persons:
@@ -396,7 +396,7 @@
     personne:
       type_personne: P
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_plomberie_et_installation_sanitaire: 7000000
       total_charges_releve_detaille: 0
     persons:
@@ -412,7 +412,7 @@
     personne:
       type_personne: P
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_plomberie_et_installation_sanitaire: 7000000
       total_charges_releve_detaille: 5000000
     persons:
@@ -428,7 +428,7 @@
     personne:
       type_personne: P
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_boulangerie_baguettes_gros: 5500000
       total_charges_releve_detaille: 3000000
     persons:
@@ -444,7 +444,7 @@
     personne:
       type_personne: P
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_boulangerie_baguettes_gros: 5500000
       total_charges_releve_detaille: 0
     persons:
@@ -460,7 +460,7 @@
     personne:
       type_personne: P
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_boulangerie_baguettes_gros: 7000000
       total_charges_releve_detaille: 0
     persons:
@@ -476,7 +476,7 @@
     personne:
       type_personne: P
       releve_de_charges_fourni: N
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_armateurs: 5500000
       total_charges_releve_detaille: 0
     persons:
@@ -492,7 +492,7 @@
     personne:
       type_personne: P
       releve_de_charges_fourni: N
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_armateurs: 5500000
       total_charges_releve_detaille: 3000000
     persons:
@@ -508,7 +508,7 @@
     personne:
       type_personne: P
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_armateurs: 7000000
       total_charges_releve_detaille: 4000000
     persons:
@@ -524,7 +524,7 @@
     personne:
       type_personne: P
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_armateurs: 7000000
       total_charges_releve_detaille: 0
     persons:
@@ -540,7 +540,7 @@
     personne:
       type_personne: M
       releve_de_charges_fourni: N
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_boulangerie_autres: 5500000
       total_charges_releve_detaille: 3000000
     persons:
@@ -556,7 +556,7 @@
     personne:
       type_personne: M
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_boulangerie_autres: 5500000
       total_charges_releve_detaille: 3000000
     persons:
@@ -572,7 +572,7 @@
     personne:
       type_personne: M
       releve_de_charges_fourni: N
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_boulangerie_autres: 7000000
       total_charges_releve_detaille: 4000000
     persons:
@@ -588,7 +588,7 @@
     personne:
       type_personne: P
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_hotel_pension_famille: 5500000
       total_charges_releve_detaille: 3000000
     persons:
@@ -604,7 +604,7 @@
     personne:
       type_personne: P
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_entreprise_de_travaux_publics: 16000000
       total_charges_releve_detaille: 9000000
     persons:
@@ -620,7 +620,7 @@
     personne:
       type_personne: M
       releve_de_charges_fourni: N
-      annexes_IT_fournies: N
+      annexes_it_fournies: N
       chiffre_affaire_entreprise_de_travaux_publics: 16000000
       total_charges_releve_detaille: 0
     persons:
@@ -636,7 +636,7 @@
     personne:
       type_personne: M
       releve_de_charges_fourni: O
-      annexes_IT_fournies: N
+      annexes_it_fournies: N
       chiffre_affaire_entreprise_de_travaux_publics: 6000000
       total_charges_releve_detaille: 3000000
     persons:
@@ -652,7 +652,7 @@
     personne:
       type_personne: P
       releve_de_charges_fourni: N
-      annexes_IT_fournies: N
+      annexes_it_fournies: N
       chiffre_affaire_boulangerie_baguettes_detail: 16000000
       total_charges_releve_detaille: 16000000
     persons:
@@ -668,7 +668,7 @@
     personne:
       type_personne: M
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_boulangerie_baguettes_detail: 16000000
       total_charges_releve_detaille: 16000000
     persons:
@@ -684,7 +684,7 @@
     personne:
       type_personne: M
       releve_de_charges_fourni: N
-      annexes_IT_fournies: N
+      annexes_it_fournies: N
       chiffre_affaire_armateurs_de_goelettes: 16000000
       total_charges_releve_detaille: 0
     persons:
@@ -700,7 +700,7 @@
     personne:
       type_personne: M
       releve_de_charges_fourni: N
-      annexes_IT_fournies: N
+      annexes_it_fournies: N
       chiffre_affaire_armateurs_de_goelettes: 6000000
       total_charges_releve_detaille: 0
     persons:
@@ -716,7 +716,7 @@
     personne:
       type_personne: M
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_armateurs_de_goelettes: 16000000
       total_charges_releve_detaille: 10000000
     persons:
@@ -732,7 +732,7 @@
     personne:
       type_personne: M
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_denrees_emporter_ou_sur_place: 16000000
       total_charges_releve_detaille: 0
     persons:
@@ -748,7 +748,7 @@
     personne:
       type_personne: M
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_denrees_emporter_ou_sur_place: 15000000
       total_charges_releve_detaille: 0
     persons:
@@ -764,7 +764,7 @@
     personne:
       type_personne: M
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_denrees_emporter_ou_sur_place: 16000000
       total_charges_releve_detaille: 10000000
     persons:
@@ -780,7 +780,7 @@
     personne:
       type_personne: M
       releve_de_charges_fourni: O
-      annexes_IT_fournies: O
+      annexes_it_fournies: O
       chiffre_affaire_acconage_de_coprah: 40000000
       total_charges_releve_detaille: 0
     persons:
