--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
     -
       name: Checkout
-      uses: actions/checkout@v3.2.0
+      uses: actions/checkout@v4.2.2
     -
       name: Dependencies
       run: docker/install_deps --test
@@ -37,13 +37,13 @@ jobs:
     steps:
     -
       name: Checkout
-      uses: actions/checkout@v3.2.0
+      uses: actions/checkout@v4.2.2
     -
       name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2.5.0
+      uses: docker/setup-buildx-action@v3.9.0
     -
       name: Login to DockerHub
-      uses: docker/login-action@v2.1.0
+      uses: docker/login-action@3.3.0
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
@@ -78,7 +78,7 @@ jobs:
         tags: |
           ${{ env.repo }}:${{ steps.extract_tag.outputs.tag }}
     - name: Update repo description
-      uses: peter-evans/dockerhub-description@v3.3.0
+      uses: peter-evans/dockerhub-description@v4.0.0
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
